# CHDMAN_GUI

./: .gitignore  README.md  build.ps1  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: __init__.py  converter.py  gui.py  main.py  styles.py  utils.py  worker.py
tests/: test_utils.py
