[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chd-batch-converter"
version = "0.1.0"
description = "Desktop app to convert BIN/CUE game images to CHD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<6.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]
